# tiny

./: .gitignore  Cargo.toml  init.toml  shortcuts.toml
.cargo/: config.toml
benches/: tree_bench.rs
crates/core/: Cargo.toml
crates/core/examples/: winit_app.rs
crates/core/src/: gpu.rs  gpu_core.rs  gpu_ffi.rs  gpu_resources.rs  lib.rs  plugin_loader.rs
crates/core/src/shaders/: circle_glyph.wgsl  glyph.wgsl  glyph_themed.wgsl  rect.wgsl  rounded_rect.wgsl
crates/font/: Cargo.toml
crates/font/src/: cluster_map.rs  emoji.rs  lib.rs  rasterize.rs  shaping.rs
crates/legacy/: Cargo.toml
crates/legacy/assets/: sample.rs
crates/legacy/assets/grammars/toml/: tree-sitter-toml.wasm
crates/legacy/assets/grammars/wgsl/: tree-sitter-wgsl.wasm
crates/legacy/examples/: basic.rs  debug_font.rs  debug_gpu.rs  plugin_demo.rs  rect_test.rs  single_char.rs  test_incremental_parsing.rs  test_scrolling.rs  tiled_circles.rs
crates/legacy/src/: accelerator.rs  app.rs  bounded_widget.rs  config.rs  coordinates.rs  diagnostics_manager.rs  editable_text_buffer.rs  editable_text_view.rs  editor_logic.rs  event_data.rs  file_picker_plugin.rs  filterable_dropdown.rs  font.rs  gpu_buffer_manager.rs  gpu_ffi_host.rs  grep_plugin.rs  history.rs  input.rs  input_types.rs  io.rs  lib.rs  line_numbers_plugin.rs  lsp_manager.rs  lsp_service.rs  main.rs  mouse_state.rs  overlay_picker.rs  render.rs  scroll.rs  scrollbar_plugin.rs  shortcuts.rs  syntax.rs  tab_bar_plugin.rs  tab_manager.rs  text_buffer.rs  text_buffer_view.rs  text_editor_plugin.rs  text_renderer.rs  text_style_box_adapter.rs  text_view.rs  (+3 more)
crates/legacy/src/shaders/: glyph_themed.wgsl
crates/legacy/tests/: font.rs  input.rs.disabled  integration_tests.rs  syntax.rs  syntax_stability_test.rs  text_effects.rs  tree.rs  undo_redo_syntax_test.rs
crates/legacy/tests/integration/: mod.rs
crates/plugins/cursor/: Cargo.toml  build.rs  plugin.toml
crates/plugins/cursor/.cargo/: config.toml
crates/plugins/cursor/src/: lib.rs  shader.wgsl
crates/plugins/diagnostics/: Cargo.toml  build.rs  plugin.toml
crates/plugins/diagnostics/src/: lib.rs  shader.wgsl
crates/plugins/selection/: Cargo.toml  build.rs  plugin.toml
crates/plugins/selection/src/: lib.rs  shader.wgsl
crates/plugins/text-editor/: Cargo.toml  plugin.toml
crates/plugins/text-editor/src/: api.rs  layout.rs  lib.rs  renderer.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: ffi.rs  gpu_helpers.rs  lib.rs  plugin_macros.rs  services.rs  toml_utils.rs  traits.rs  types.rs
crates/tree/: Cargo.toml
crates/tree/benches/: tree_bench.rs
crates/tree/src/: lib.rs  search.rs
crates/ui/: Cargo.toml
crates/ui/src/: capabilities.rs  coordinates.rs  events.rs  lib.rs  scroll.rs  selection.rs  syntax.rs  text_effects.rs  text_renderer.rs  text_view.rs  theme.rs  widget.rs
examples/: atlas_debug.rs  basic.rs  debug_coordinates.rs  debug_font.rs  debug_gpu.rs  debug_pipeline.rs  debug_widget.rs  minimal_typing.rs  rect_test.rs  scroll_test.rs  single_char.rs  test_complete_integration.rs  test_decoupled_rendering.rs  test_incremental_parsing.rs  test_real_editor.rs  test_scrolling.rs  test_syntax_updates.rs  test_themes.rs  test_viewport_syntax_simple.rs  tiled_circles.rs  unified_plugin_example.rs  window.rs
scripts/: build_plugins.sh
src/: app.rs  coordinates.rs  font.rs  gpu.rs  history.rs  input.rs  io.rs  lib.rs  main.rs  render.rs  syntax.rs  text_effects.rs  text_renderer.rs  theme.rs  tree.rs  tree_nav.rs  widget.rs
src/shaders/: circle.wgsl  circle_glyph.wgsl  glyph_themed.wgsl  rect.wgsl
tests/: coordinates.rs  integration_tests.rs  text_effects.rs  tree.rs
tests/integration/: mod.rs  pipeline_integration_tests.rs  rendering_pipeline_tests.rs  working_state_tests.rs
