[workspace]
members = [
    "crates/tree",
    "crates/legacy",
    "crates/sdk",
    "crates/core",
    # "crates/std_plugins/*", # Will add when we create plugins
]
exclude = [
    "crates/plugins/cursor",  # Built separately as dynamic plugin
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tiny Editor Contributors"]

[workspace.dependencies]
# Shared dependencies across all crates
wgpu = { version = "26.0.1", features = ["metal"] }
bytemuck = { version = "1", features = ["derive"] }
ahash = { version = "0.8.12", features = ["serde"] }
winit = "0.30"

[profile.release]
# lto = true
# codegen-units = 1
opt-level = 3
debug = true

[profile.dev]
opt-level = 1  # Faster compilation, still decent perf
