[package]
name = "tiny-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "tiny-editor"
path = "src/main.rs"

[dependencies]
# Minimal dependencies - SDK should be lightweight
wgpu = { workspace = true }
bytemuck = { workspace = true }
ahash = { workspace = true }

# Plugin SDK and UI
tiny-sdk = { path = "../sdk" }
tiny-core = { path = "../core" }
tiny-tree = { path = "../tree" }
tiny-font = { path = "../font" }
tiny-ui = { path = "../ui" }
diagnostics-plugin = { path = "../plugins/diagnostics" }

winit = { version = "0.30", optional = true }

# Core data structures
parking_lot = "0.12"
lazy_static = "1.4"  # For global statics
arc-swap = "1.7"  # Lock-free Arc swapping for RCU pattern

# LSP support
tower-lsp = "0.20"  # LSP server framework
lsp-types = "0.97"
url = "2.5"  # URL parsing for LSP

# System integration
arboard = "3.4"  # Clipboard support
pollster = "0.3"  # Async executor for main
notify = "6"  # File watching for shader hot-reload
regex = "1"  # Regex for grep search
nucleo = "0.5.0"  # Fuzzy matching for file picker and grep
ignore = "0.4"  # Fast directory traversal with gitignore support

# Async runtime for LSP
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
mimalloc = "0.1.48"

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[features]
default = ["winit"]
test-support = []
winit = ["dep:winit"]

[dev-dependencies]
criterion = "0.7"  # Benchmarking
pollster = "0.3"   # Async executor for examples

