[package]
name = "tiny-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
tiny-sdk = { path = "../sdk" }
tiny-core = { path = "../core" }
tiny-tree = { path = "../tree" }
tiny-font = { path = "../font" }

# Graphics
wgpu = { workspace = true }
bytemuck = { workspace = true }
ahash = { workspace = true }

# Text rendering
swash = "0.2.5"

# Syntax highlighting
tree-sitter = { version = "0.25", features = ["wasm"] }
tree-sitter-rust = "0.24"
tree-sitter-md = { version = "0.5.1", features = ["parser"] }

# System integration
arboard = "3.4"  # Clipboard support
parking_lot = "0.12"
arc-swap = "1.7"
lazy_static = "1.4"
serde_json = "1.0"
lsp-types = "0.97"
