[package]
name = "cursor-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiny-sdk = { path = "../../sdk" }
tiny-core = { path = "../../core" }

# For plugin exports
[dependencies.abi_stable]
version = "0.11"
optional = true

[features]
default = []
dynamic = ["abi_stable"]
