[package]
name = "cursor-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiny-sdk = { path = "../../sdk" }
tiny-core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# For plugin exports
[dependencies.abi_stable]
version = "0.11"
optional = true

[features]
default = []
dynamic = ["abi_stable"]
