[package]
name = "diagnostics-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiny-sdk = { path = "../../sdk" }
tiny-core = { path = "../../core" }
tiny-ui = { path = "../../ui" }
tiny-font = { path = "../../font" }
tiny-tree = { path = "../../tree" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ahash.workspace = true

# For plugin exports
[dependencies.abi_stable]
version = "0.11"
optional = true

[features]
default = []
dynamic = ["abi_stable"]
