[package]
name = "text-editor-plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tiny-sdk = { path = "../../sdk" }
tiny-core = { path = "../../core" }
tiny-tree = { path = "../../tree" }
tiny-font = { path = "../../font" }
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# For plugin exports
[dependencies.abi_stable]
version = "0.11"
optional = true

[features]
default = []
dynamic = ["abi_stable"]